[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slacktokens"
version = "0.2.4"

dependencies = [
	"leveldb==0.201",
    "pycookiecheat",
]
# Python 3.12 deprecates "PyUnicode_AS_UNICODE", which python-leveldb relies on. I
# haven't found a workaround, so just still with 3.11 for now. I've read "Should You
# Use Upper Bound Version Contraints" and there seems to be a thick cultural barrier
# to me understanding all the stated reasons not to to do this. So I'm doing it.
requires-python = ">=3.7, <3.12"

authors = [ {name = "Heath Raftery", email = "heath@empirical.ee" } ]
description = "Extract personal tokens and authentication cookie from the Slack app"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/hraftery/slacktokens"

[tool.setuptools]
py-modules = ["slacktokens"]
