[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slacktokens"
version = "0.2.5"

dependencies = [
	"leveldb==0.201",
    "pycookiecheat",
]
# Python 3.12 deprecates "PyUnicode_AS_UNICODE", which python-leveldb relies on. I
# haven't found a workaround, so just require 3.11 for now. I've read "Should You Use
# Upper Bound Version Contraints" and got thoroughly turned off by the hyperrationality.
# Turns out, in amongst the vehement denial of pragmatism, there's a fundamental flaw
# in upper bounds - most resolvers, like pip, will quietly "roll back" and just install
# the last version without this bound! This is not the intended effect, which is to
# um... require 3.11. Since this is still the intention, I will also yank all previous
# versions to get the intended outcome. People can still use the previous versions if
# they want, but by default they will just have to install 3.11 and will get the
# current, functional version.
requires-python = ">=3.7, <3.12"

authors = [ {name = "Heath Raftery", email = "heath@empirical.ee" } ]
description = "Extract personal tokens and authentication cookie from the Slack app"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/hraftery/slacktokens"

[tool.setuptools]
py-modules = ["slacktokens"]
