[metadata]
name = slacktokens
version = 0.2.1
url = https://github.com/hraftery/slacktokens
author = Heath Raftery
author_email = heath@empirical.ee
description = Extract personal tokens and authentication cookie from the Slack app
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
py_modules = slacktokens
python_requires = >=3.7
install_requires =
    leveldb==0.201
    #'pycookiecheat',
    # Turns out "direct links" are forbidden by PyPi, and support for "dependency links"
    # has been dropped by pip starting with version 19.0 (released 2019-01-22). Could use
    # "requirements.txt" and some instructions...  Ref: https://stackoverflow.com/q/68073819/3697870
    #'pycookiecheat@git+https://github.com/hraftery/pycookiecheat.git@a82d32730b01ebe20393ab5ca7b3267975ed0767#egg=pycookiecheat'
    # For now, use forked package instead:
    pycookiecheat-slack
